# Copyright 2023 M.Boerger
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

licenses(["notice"])

cc_library(
    name = "parse_text_proto_cc",
    srcs = ["parse_text_proto.cc"],
    hdrs = ["parse_text_proto.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/base:log_severity",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "parse_text_proto_test",
    srcs = ["parse_text_proto_test.cc"],
    deps = [
        ":parse_text_proto_cc",
        "//mbo/proto/tests:simple_message_cc_proto",
        "//mbo/testing/proto:proto_matchers_cc",
        "@com_google_googletest//:gtest_main",
    ],
)
