# Copyright 2023 M.Boerger
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:private"])

licenses(["notice"])

proto_library(
    name = "simple_message_proto",
    srcs = ["simple_message.proto"],
    visibility = ["//mbo/proto:__subpackages__"],
)

cc_proto_library(
    name = "simple_message_cc_proto",
    visibility = ["//mbo/proto:__subpackages__"],
    deps = [":simple_message_proto"],
)

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
)

cc_proto_library(
    name = "test_cc_proto",
    visibility = ["//mbo/proto:__subpackages__"],
    deps = [":test_proto"],
)
