package(default_visibility = ["//visibility:private"])

licenses(["notice"])

cc_library(
    name = "proto_matchers_cc",
    testonly = 1,
    srcs = [
        "proto_test_util.cc",
        "proto_test_util.h",
    ],
    hdrs = ["proto_matchers.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest",
        "@com_google_protobuf//:protobuf",
    ],
)

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
)

cc_proto_library(
    name = "test_cc_proto",
    deps = [":test_proto"],
)
